# Andrea-Mosaic-CLI

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/app/: catalog.rs  image_utils.rs  mod.rs  mosaic.rs  traits.rs
src/cli/: mod.rs
src/config/: mod.rs
src/domain/: catalog.rs  mod.rs  mosaic.rs
src/infra/: catalog_store.rs  image_io.rs  mod.rs
src/ui/: mod.rs
