[package]
name = "andreamosaic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
blake3 = "1.5"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
directories = "5.0"
image = { version = "0.25", default-features = false, features = ["bmp", "gif", "jpeg", "png"] }
ratatui = "0.26"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.8"
walkdir = "2.5"
